<resources>
    <string name="app_name">Galegando21</string>
    <string name="action_settings">Axustes</string>
    <string name="day01_text">Día 1 - Pasagalego</string>
    <string name="pasagalego">PasaGalego</string>
    <string name="resposta">Resposta</string>
    <string name="day02_text">Día 2 - Onde están?</string>
    <string name="musica_description">Fixemos unha pequena selección de cancións en galego para ti! fai click na seguinte icona e descubre novas cancións en galego, engade as que máis che gusten á túa playlist favorita :)</string>
    <string name="atrapame_se_podes_explicacion">Basado na serie da TVG co mesmo nome, este\nxogo consiste en unha serie de preguntas\nde cultura xeral nas que o primeiro xogador en \nchegar a 5 respostas correctas é o gañador.\n\nXoga ti só ou faino con un amigo para \nver quen é o máis erudito.</string>
    <string name="atrapame_se_podes">Atrápame se podes</string>
    <string name="comezar_a_xogar">Comezar a xogar</string>
    <string name="day03_text">Día 3 - Xogo de Palabras</string>
    <string name="pasagalego_explicacion">Este xogo está basado no famoso programa\ntelevisivo ‘Pasapalabra’.\n\nPor cada letra do rosco terás que ler unha\ndefinición e responder unha palabra\nque comece ou conteña esa letra.</string>
    <string name="atrapa_un_millon_explicacion">Basado no famoso programa televisivo,\nAtrapa un millón é un xogo no que o\nobxectivo é preservar a maior cantidade\nde diñeiro posible durante 8 preguntas.\n\n Mantén presionado a imaxen do diñeiro e moveo ata\n a opción na que queiras colocar o diñeiro\n (só se pode mover un cuarto do diñeiro en cada movemento).</string>
    <string name="atrapa_un_millon">Atrapa un millón</string>
    <string name="day04_text">Día 4 - Atrapa un millón</string>
    <string name="check">Comprobar</string>
    <string name="aforcado_explicacion">O aforcado é un pasatempo no que o\nxogador intenta adiviñar unha palabra\nantes de que o boneco sexa debuxado\ncompletamente en unha forca.\n\nO xogador propón letras que cre que están\nna palabra oculta e o xogo revela se esas\nletras están presentes ou non.\n\nSe o xogador adiviña correctamente todas\nas letras antes de que o boneco sea debuxado\npor completo, gaña; no caso contrario, perde.</string>
    <string name="aforcado">Aforcado</string>
    <string name="day05_text">Día 5 - Adiviña o ano da foto</string>
    <string name="letters_used">Letras usadas: %1$s</string>
    <string name="conexions_explicacion">O obxectivo de ‘Conexións’ é encontrar\ngrupos de 4 elementos que teñen algo\nen común.\n\nPor exemplo salmón, troita, dourada e \nrodaballo son os catro peixes.\n\nAs categorías sempre van ser máis\nespecíficas que ‘palabras de 5 letras’,\n‘nomes’ ou ‘verbos’.\n\nCada puzle ten unha soa solución.</string>
    <string name="conexions">Conexións</string>
    <string name="day06_text">Día 6 - Sopa de Letras</string>
    <string name="verdade_ou_mentira_explicacion">Terás que responder unha serie de preguntas\ncon 2 opcións posibles: verdadeiro ou falso.\n\nCantas respostas correctas eres capaz\nde encadear?</string>
    <string name="verdadeOuMentira">Verdade ou Mentira</string>
    <string name="day07_text">Día 7 - Agora Caio</string>
    <string name="onboarding_text">Galegando 21 ten o obxectivo de que\nincorpores o galego no teu día a día.\n\nDurante os seguintes 21 días irás\ndesbloqueando novos xogos e\ncontidos en galego.\n\nEntra cada día e completa o reto\ndiario.</string>
    <string name="comezar">Comezar</string>
    <string name="day08_text">Día 8 - Conexións</string>
    <string name="wordle">Wordle</string>
    <string name="wordle_explicacion">Adiviña a palabra en 6 intentos\n\n Despois de cada intento, a cor das letras muda para amosar o preto que estás de acertar a palabra.</string>
    <string name="adivinha_escudo">Adiviña o escudo</string>
    <string name="day09_text">Día 9 - Ruleta da Sorte</string>
    <string name="adivinha_escudo_explicacion">Este xogo consiste en unha serie de 10 preguntas con catro opcións posibles nas que terás que adiviñar de que lugar é o escudo que se mostra na pantalla.</string>
    <string name="adivinha_ano_foto">Adiviña o ano da foto</string>
    <string name="seguinte">Seguinte</string>
    <string name="day10_text">Día 10 - Explosión de Palabras</string>
    <string name="adivinhaAnoFoto_explicacion">Mostrarase unha foto e terás que adiviñar o ano no que foi tomada.\n\n Move o control ao ano no que cres que se tomou a foto e fai click en \'comprobar\'.\n\n Cada xogo ten 5 rondas e podes obter ata un total de 10 puntos por ronda.</string>
    <string name="agora_caigo">Agora caio</string>
    <string name="day11_text">Día 11 - Atrápame se podes</string>
    <string name="agora_caigo_explicacion">En este xogo, basado no concurso televisivo \'Ahora caigo\', tes que acertar preguntas, completando os ocos que faltan nas respostas.\n\n Toca en un comodín para usalo. Recorda usar o comodín se non sabes a resposta antes de que se esgote o tempo!</string>
    <string name="musica_suxerencias">tes algunha suxerencia?\n\n podes propoñela enviando un correo a booiglesiaspablo@gmail.com</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="estadisticas_usuario">Estadísticas de %1$s</string>
    <string name="anterior">Anterior</string>
    <string name="proba_velocidade">Proba de velocidade</string>
    <string name="day12_text">Día 12 - Adiviña o personaxe</string>
    <string name="proba_velocidade_explicacion">Basado en unha proba co mesmo nome do concurso televisivo \'La ruleta de la suerte\' este xogo consiste en adiviñar os paneis o máis rápido posible.\n\n Empezas con un panel en branco e unha pista e cada 2 segundos revelase unha letra.\n\n Escribe o panel completo e fai click en comprobar para pasar ao seguinte panel.</string>
    <string name="ruleta_da_sorte">Ruleta da Sorte</string>
    <string name="day13_text">Día 13 - Verdade ou Mentira</string>
    <string name="ruleta_da_sorte_explicacion">A ruleta da sorte é un xogo basado no concurso televisivo co mesmo nome.\n\n Preme o botón \'TIRAR RULETA\' para comezar a primeira tirada. Cando a ruleta se pare aparecerá en pantalla unha das accións que determinará o diñeiro que gañarás. Elixe unha letra tendo en conta que o número de veces que se repita esa letra será o multiplicador da cantidade recibida na ruleta.\n\n Tamén hai accións especiais como \'BOTE\' ou \'QUEBRA\'. Repite tiradas da ruleta e letras ata que completes o panel.\n\n Se a letra non está no panel perderás a partida, ten coidado!</string>
    <string name="day14_text">Día 14 - Adiviña o escudo</string>
    <string name="debuxa_e_adivinha">Debuxa e Adiviña</string>
    <string name="debuxa_e_adivinha_explicacion">\'Debuxa e adiviña\' disfrutaralo máis con un amigo ou familiar. Na pantalla aparecerá unha palabra que só poderá ver quen vai debuxar.\n\nA persoa que vai debuxar preme o botón de ocultar palabra e comeza a facer o debuxo necesario para que a outra persoa adiviñe cal é a palabra oculta.</string>
    <string name="day15_text">Día 15 - Wordle</string>
    <string name="onde_estan">Onde están?</string>
    <string name="day16_text">Día 16 - Anagramas</string>
    <string name="onde_estan_explicacion">Este xogo está badado en unha proba do concurso televisivo \'Pasapalabra\'.\n\nO obxectivo é encontrar a palabra que se mostra no recadro superior. Cando fas click en unha elipse revelase a palabra oculta correspondente a esa elipse. Se a palabra coincide coa que se mostra no recadro superior acertaches.\n\nO xogo continúa ata que encontres todas as palabras no orden correcto.</string>
    <string name="day17_text">Día 17 - Proba de velocidade</string>
    <string name="sopa_de_letras">Sopa de Letras</string>
    <string name="anagramas">Anagramas</string>
    <string name="day18_text">Día 18 - Palabras Encadeadas</string>
    <string name="anagramas_explicacion">Mostraraseche unha palabra coas súas letras desordeadas.\n\nO obxectivo do xogo é reordear as letras de esa palabra correctamente. Escribea no campo de texto que verás en pantalla e preme \'Comprobar\' para introducir a resposta.</string>
    <string name="day19_text">Día 19 - Aforcado</string>
    <string name="adivinha_o_personaxe">Adiviña o Personaxe</string>
    <string name="adivinha_personaxe_explicacion">En este xogo, basado en unha proba do concurso televisivo \'Ahora Caigo\', o obxectivo é acertar o nome de un personaxe.\n\nPara conseguilo por cada intento que fagas mostraraseche unha nova pista. Acerta o personaxe antes de que se esgoten as pistas!</string>
    <string name="xogo_de_palabras">Xogo de Palabras</string>
    <string name="day20_text">Día 20 - Debuxa e Adiviña</string>
    <string name="xogo_palabras_explicacion">Este xogo proporcionache 7 letras, unha das cales está no centro e debe ser usada en cada palabra que formes.\n\nO obxectivo é crear tantas palabras válidas como poidas usando esas letras, cada palabra debe ter un mínimo de catro letras.\nA medida que introduces palabras o xogo validaas según o diccionario e acumula a puntuación total.\n\nSe queres rematar o xogo antes de chegar á puntuación total podes facelo mantendo premido o botón \'Comprobar\'.</string>
    <string name="day21_text">Día 21 - 21 días co galego e +</string>
    <string name="explosion_de_palabras">Explosión de Palabras</string>
    <string name="explosion_palabras_explicacion">Este xogo consiste en formar palabras coas letras que van caendo na pantalla. Se a lista de letras chega ata a parte dereita da imaxen perderás.\n\n Recibirás un punto por cada letra da palabra formada.</string>
    <string name="dias_co_galego_e_mais">21 días co galego e +</string>
    <string name="xogos_suxeridos">Xogos suxeridos</string>
    <string name="axustes">Axustes</string>
    <string name="palabras_encadeadas">Palabras Encadeadas</string>
    <string name="palabras_encadeadas_explicacion">O obxectivo de este xogo é encadear o maior número de palabras sen repetir.\n\nComezarás con unha sílaba e terás 10 segundos para escribir unha palabra que exista no diccionario e comece coas letras que aparecen no campo de texto.\n\nPor cada palabra que escribas e encadees correctamente repetirase o procedemento. Exemplo: monxa-xamon-monte.\n\nNa parte superior verás o tempo restante. A medida que o tempo se esgote a cor de fondo irá cambiando para alertarte.</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="dayBrisca">Brisca</string>
    <string name="brisca">Brisca</string>
    <string name="brisca_explicacion">A Brisca é un xogo de cartas da familia do Tute, é decir, un xogo de bazas con un pau de triunfo no que as cartas se van tomandos según se van xogando as bazas.\n\nNa man do xogador haberá 3 cartas en todo momento ata finalizar a partida. En cada xogada cada xogador descobre unha carta e o que teña a maior carta do pau do triunfo ou a carta máis alta do pau de saída gaña a baza quedandose coa puntuación de ambas cartas e comezando a seguinte baza. Para determinar quen gañou a baza en caso de que ambos xogadores escollan unha carta do mesmo pau primeiro mirase a maior puntuación da carta e en caso de ter ambas puntuación 0 mirase cal é a carta máis alta.\n\nCada xogador rouba unha carta do mazo para xogar a seguinte baza. Gaña o xogador que obteña máis puntos.\n\nSe tes na túa man o número 7 do trunfo podes cambialo pola carta de trunfo mantendo presionada a túa carta. Da mesma forma o 2 do trunfo pode cambiarse polo 7,6,5 ou 4.</string>
    <string name="perfil">Perfil</string>
    <string name="tenda">Tenda</string>
    <string name="sincronizar_datos">Sincronizar datos</string>
    <string name="restablecer_contrasinal">Actualizar contrasinal</string>
    <string name="calendario">Calendario</string>
</resources>