<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplicationsettings.MainActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/perfil"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:title="@string/estadisticas"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tenda"
        android:orderInCategory="100"
        android:title="@string/tenda"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_suggested_games"
        android:orderInCategory="100"
        android:title="@string/xogos_suxeridos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/axustes"
        app:showAsAction="never" />
</menu>